objects/dbu_StateNames__mdt.object
<CustomObject>
    <fields>
        <fullName>dbu_Country_Code__c</fullName>
        <label>dbu_Country Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_Country__c</fullName>
        <label>dbu_Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_State_Code__c</fullName>
        <label>dbu_State Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_State__c</fullName>
        <label>dbu_State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_Stateslist__c</fullName>
        <label>dbu_Stateslist</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>dbu_StateNames</label>
    <listViews>
        <fullName>DBU_States_List</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>dbu_Country__c</columns>
        <columns>dbu_Country_Code__c</columns>
        <columns>dbu_State__c</columns>
        <columns>dbu_State_Code__c</columns>
        <columns>dbu_Stateslist__c</columns>
        <filterScope>Everything</filterScope>
        <label>DBU States List</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>dbu_StateNames</pluralLabel>
</CustomObject>